# eratosthene-stream

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.MD
code/shaders/: shader.vert.spv
code/src/: engine.cpp  models.h  server.cpp  utils.cpp
code/web/: index.html
doc/report/: report.tex
doc/report/appendices/: code_resources.tex  server_setup.tex
doc/report/chapters/: architecture.tex  further_development.tex  implementation.tex  introduction.tex
doc/report/head/: abstracts.tex
include/base64/: base64.cpp  base64.h
include/happly/: happly.h
include/stb/: stb_image.h
shaders/: compile.sh  shader.vert
src/: engine.cpp  engine.h  eratosthene-stream.cpp  hardware.cpp  hardware.h  main.cpp  main.h  models.cpp  models.h  server.cpp  server.h  utils.cpp  utils.h
web/: index.html  main.js
